some more of jython...
git-svn-id: svn://localhost/trunk@594 7f4d9e04-a92a-ab41-bea9-970b690ef4a7